<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fdf5e6"
    tools:context=".about"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffe4e1"
        android:minHeight="50dp"
        android:elevation="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/fotodiri"
        android:elevation="0dp"/>

    <TextView
        android:text="@string/nama"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="10dp"
        android:background="#ffe4e1">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#F08080"
            android:textSize="15sp"
            android:text="@string/salsabila_adinda_hermawan" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:text="@string/universitas"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_gravity="right"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="10dp"
        android:background="#ffe4e1">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#F08080"
            android:textSize="17sp"
            android:text="@string/universitas_udayana" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_gravity="right"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="10dp"
        android:background="#ffe4e1">

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#F08080"
            android:textSize="17sp"
            android:text="@string/salsabilhermawan_gmail_com"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>