<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf5e6"
    tools:context="com.dicoding.picodiploma.submitionmentreeapps.detailmentor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffe4e1"
        android:elevation="5dp"
        android:minHeight="50dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    android:layout_marginRight="20dp"
                    tools:background="@drawable/mentor1"/>
                <TextView
                    android:text="@string/content_favorite"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_favorite"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                tools:targetApi="o">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:paddingBottom="0dp"
                    android:text="@string/jenis_mentoring"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#F08080"/>

                <TextView
                    android:id="@+id/tv_item_jenis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="20sp"
                    tools:text="Mentoring Persiapan S1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:targetApi="o">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:paddingBottom="0dp"
                    android:text="@string/detail"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#F08080"/>

                <TextView
                    android:id="@+id/tv_item_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="15sp"
                    tools:text="Detail" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:targetApi="o">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:paddingBottom="0dp"
                    android:text="@string/detail"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Layanan"
                    android:textColor="#F08080"/>

                <TextView
                    android:id="@+id/tv_item_layanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:textSize="20sp"
                    tools:text="Layanan" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>